[gd_scene load_steps=12 format=2]

[ext_resource path="res://Grid.gd" type="Script" id=1]
[ext_resource path="res://Rooms.gd" type="Script" id=2]
[ext_resource path="res://Square.gd" type="Script" id=3]
[ext_resource path="res://A4 Sheet.gd" type="Script" id=4]
[ext_resource path="res://Application.gd" type="Script" id=5]
[ext_resource path="res://MenuDrag.gd" type="Script" id=6]
[ext_resource path="res://Menu1.gd" type="Script" id=7]
[ext_resource path="res://HWall.gd" type="Script" id=8]
[ext_resource path="res://VWall.gd" type="Script" id=9]
[ext_resource path="res://Hatching.gd" type="Script" id=10]

[sub_resource type="Theme" id=1]

[node name="Application" type="Node2D"]
script = ExtResource( 5 )

[node name="A4 Sheet" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Hatching" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Rooms" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Square" type="Node2D" parent="Rooms"]
visible = false
script = ExtResource( 3 )

[node name="HWall" type="Node2D" parent="Rooms"]
visible = false
script = ExtResource( 8 )

[node name="VWall" type="Node2D" parent="Rooms"]
visible = false
script = ExtResource( 9 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Menu1" type="MarginContainer" parent="."]
margin_right = 70.0
margin_bottom = 128.0
theme = SubResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu1"]
margin_right = 70.0
margin_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu1/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 49.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuDrag" type="Label" parent="Menu1/ColorRect/VBoxContainer"]
margin_right = 49.0
margin_bottom = 14.0
mouse_filter = 1
mouse_default_cursor_shape = 13
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "="
align = 1
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="Menu1/ColorRect/VBoxContainer"]
margin_top = 18.0
margin_right = 49.0
margin_bottom = 18.0

[node name="btnRoom" type="Button" parent="Menu1/ColorRect/VBoxContainer"]
margin_top = 22.0
margin_right = 49.0
margin_bottom = 42.0
text = "Room"

[node name="btnWall" type="Button" parent="Menu1/ColorRect/VBoxContainer"]
margin_top = 46.0
margin_right = 49.0
margin_bottom = 66.0
text = "Wall"

[node name="btnSavePng" type="Button" parent="Menu1/ColorRect/VBoxContainer"]
margin_top = 70.0
margin_right = 49.0
margin_bottom = 90.0
text = "png"

[node name="Label" type="Label" parent="Menu1/ColorRect/VBoxContainer"]
margin_top = 94.0
margin_right = 49.0
margin_bottom = 108.0
text = "--------"

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 50.0
margin_top = 50.0
margin_right = 456.0
margin_bottom = 284.0
resizable = true
dialog_text = "The .png will be approx A4 in size"
access = 2
current_dir = "/Users/jwgla/OneDrive/Documents/GitHub/dungeon-mapper-2"
current_path = "/Users/jwgla/OneDrive/Documents/GitHub/dungeon-mapper-2/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="create_hwall" from="Grid" to="Rooms" method="_on_Grid_create_hwall"]
[connection signal="create_room" from="Grid" to="Rooms" method="_on_Grid_create_room"]
[connection signal="create_vwall" from="Grid" to="Rooms" method="_on_Grid_create_vwall"]
[connection signal="gui_input" from="Menu1/ColorRect/VBoxContainer/MenuDrag" to="Menu1" method="_on_MenuDrag_gui_input"]
[connection signal="pressed" from="Menu1/ColorRect/VBoxContainer/btnRoom" to="Grid" method="_on_btnRoom_pressed"]
[connection signal="pressed" from="Menu1/ColorRect/VBoxContainer/btnWall" to="Grid" method="_on_btnWall_pressed"]
[connection signal="pressed" from="Menu1/ColorRect/VBoxContainer/btnSavePng" to="." method="_on_btnSavePng_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
